--- a/package.json
+++ b/package.json
@@ -14,9 +14,27 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.26.1",
+    "@fontsource/dm-sans": "^4.2.1",
+    "@fontsource/ibm-plex-serif": "^4.2.1",
+    "gatsby": "^2.32.6",
+    "gatsby-image": "^2.11.0",
+    "gatsby-plugin-anchor-links": "^1.2.1",
+    "gatsby-plugin-manifest": "^3.0.0",
+    "gatsby-plugin-offline": "^4.0.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-sharp": "^2.14.3",
+    "gatsby-remark-image-attributes": "^0.2.8",
+    "gatsby-remark-images": "^3.11.1",
+    "gatsby-remark-responsive-iframe": "^2.11.0",
+    "gatsby-remark-unwrap-images": "^1.0.2",
+    "gatsby-source-filesystem": "^2.11.1",
+    "gatsby-transformer-remark": "^2.16.1",
+    "gatsby-transformer-sharp": "^2.12.0",
+    "markdown-it": "^12.0.4",
+    "photoswipe": "^4.1.3",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "2.2.1"
