--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "gatsby": "^2.32.6",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
-    "gatsby-plugin-manifest": "^3.0.0",
-    "gatsby-plugin-offline": "^4.0.0",
-    "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-manifest": "^2.12.1",
+    "gatsby-plugin-offline": "^3.10.2",
+    "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.14.3",
     "gatsby-remark-image-attributes": "^0.2.8",
     "gatsby-remark-images": "^3.11.1",
@@ -30,6 +30,7 @@
     "gatsby-source-filesystem": "^2.11.1",
     "gatsby-transformer-remark": "^2.16.1",
     "gatsby-transformer-sharp": "^2.12.0",
+    "html-react-parser": "^1.2.4",
     "markdown-it": "^12.0.4",
     "photoswipe": "^4.1.3",
     "react": "^16.12.0",
