--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^2.32.6",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
+    "gatsby-plugin-catch-links": "^3.7.1",
     "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-offline": "^3.10.2",
     "gatsby-plugin-page-creator": "^3.1.0",
