--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "dependencies": {
     "@fontsource/dm-sans": "^4.2.1",
     "@fontsource/ibm-plex-serif": "^4.2.1",
+    "@react-spring/web": "^9.4.1",
+    "@use-gesture/react": "^10.2.4",
     "gatsby": "^2.32.6",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
+    "gatsby-plugin-breakpoints": "^1.3.6",
     "gatsby-plugin-catch-links": "^3.7.1",
     "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-offline": "^3.10.2",
@@ -32,10 +35,12 @@
     "gatsby-source-filesystem": "^2.11.1",
     "gatsby-transformer-remark": "^2.16.1",
     "gatsby-transformer-sharp": "^2.12.0",
+    "google-spreadsheet": "^3.2.0",
     "html-react-parser": "^1.2.4",
     "markdown-it": "^12.0.4",
     "photoswipe": "^4.1.3",
     "react": "^16.12.0",
+    "react-accessible-dropdown-menu-hook": "^3.1.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0"
   },
