--- a/package.json
+++ b/package.json
@@ -14,33 +14,35 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@fontsource/dm-sans": "^4.2.1",
-    "@fontsource/ibm-plex-serif": "^4.2.1",
-    "@react-spring/web": "^9.4.1",
-    "@use-gesture/react": "^10.2.4",
-    "gatsby": "^2.32.6",
-    "gatsby-image": "^2.11.0",
+    "@fontsource/dm-sans": "^4.5.1",
+    "@fontsource/ibm-plex-serif": "^4.5.2",
+    "@react-spring/web": "^9.4.3",
+    "@use-gesture/react": "^10.2.6",
+    "gatsby": "3.14.5",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-breakpoints": "^1.3.6",
-    "gatsby-plugin-catch-links": "^3.7.1",
-    "gatsby-plugin-manifest": "^2.12.1",
-    "gatsby-plugin-offline": "^3.10.2",
-    "gatsby-plugin-page-creator": "^3.1.0",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sharp": "^2.14.3",
-    "gatsby-remark-image-attributes": "^0.2.8",
-    "gatsby-remark-images": "^3.11.1",
-    "gatsby-remark-responsive-iframe": "^2.11.0",
+    "gatsby-plugin-catch-links": "^3.14.0",
+    "gatsby-plugin-image": "^1.14.2",
+    "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-plugin-offline": "^4.14.0",
+    "gatsby-plugin-page-creator": "^3.14.0",
+    "gatsby-plugin-react-helmet": "^4.14.0",
+    "gatsby-plugin-sharp": "^3.14.3",
+    "gatsby-remark-image-attributes": "^1.1.0",
+    "gatsby-remark-images": "5.11",
+    "gatsby-remark-images-medium-zoom": "^1.7.0",
+    "gatsby-remark-responsive-iframe": "4.11",
     "gatsby-remark-unwrap-images": "^1.0.2",
-    "gatsby-source-filesystem": "^2.11.1",
-    "gatsby-transformer-remark": "^2.16.1",
-    "gatsby-transformer-sharp": "^2.12.0",
+    "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-transformer-remark": "4.11",
+    "gatsby-transformer-sharp": "3.14",
     "google-spreadsheet": "^3.2.0",
-    "html-react-parser": "^1.2.4",
-    "markdown-it": "^12.0.4",
+    "html-react-parser": "^1.4.8",
+    "markdown-it": "^12.3.2",
     "photoswipe": "^4.1.3",
     "react": "^16.12.0",
-    "react-accessible-dropdown-menu-hook": "^3.1.0",
+    "react-accessible-dropdown-menu-hook": "^3.2.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0"
   },
